# C-_7

CPP_skillbox_matrix_DLL-main/: CMakeLists.txt  README.md
CPP_skillbox_matrix_DLL-main/CPP_skillbox_matrix_DLL/exe/: CMakeLists.txt
CPP_skillbox_matrix_DLL-main/CPP_skillbox_matrix_DLL/exe/libs/matrixlib/: export_shared.h  export_static.h
CPP_skillbox_matrix_DLL-main/CPP_skillbox_matrix_DLL/lib/matrixlib/: matrix.cpp  matrix.h
CPP_skillbox_matrix_DLL-main/CPP_skillbox_matrix_DLL/lib/matrixlib/c/: c_api.cpp  c_api.h
CPP_skillbox_matrix_DLL-main/CPP_skillbox_matrix_DLL/lib/test/: test_static.cpp
